methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
  for (o <- 1 to 6) {
         ^